# how-long

./: .gitignore  README.rst  pyproject.toml
how_long/: __init__.py  how_long.py
tests/: test_how_long.py
