[tool.poetry]
name = "how-long"
version = "0.1.0"
description = "A simple decorator to measure a function excecution time."
authors = ["wilfredinni <carlos.w.montecinos@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
